Fixed spacing between navigation items causing chrome errors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ header #logo.animation { -webkit-animation-name:logo-rotate; -webkit-animation-d
 header #navigation { list-style:none; position:relative; clear:both; overflow:hidden; height:168px; margin-top:-30px; }
 header #navigation ul { margin-top:50px; }
 header #navigation ul li { display:inline-block; }
-header #navigation ul li > a { line-height:88px; color:#8E959C; font-weight:300; letter-spacing:0.15em; text-transform:uppercase; }
+header #navigation ul li > a { line-height:88px; color:#8E959C; font-weight:300; letter-spacing:0.1em; text-transform:uppercase; }
 header #navigation ul li.active > a { color:#fff; }
 header #navigation ul.left li { margin-right:50px; }
 header #navigation ul.right li { margin-left:50px; }
